# afrr-price-forecast-engine

./: .gitignore  TODO.md  pyproject.toml  sampling.ipynb  setup.py  sys_id_boiler.ipynb
afrr_price_ts_forecast/: afrr_preprocessing.py  afrr_up_price_forecast_ensemble.ipynb  gp_forecaster.py  gp_hyperparams_opt.py  gp_regressor.ipynb  hyper_params_opt_utils.py  hyperparams_tuning.ipynb  hyperparams_tuning_gp_model copy.py  hyperparams_tuning_gp_model.py  lr_forecaster.py  lr_hyperparams_opt.py  utils.py  xgb_hyperparams_opt.py
boiler_sys_identification/: sys_id_boiler.ipynb
data/: 2025-05-02_27scenarios.parquet  afrr_price.parquet  boiler_data.parquet  scenario_probabilities.csv  scenario_probabilities1.csv  scenario_probabilities2.csv  scenario_probabilities3.csv  scenarios_alldays.parquet  scenarios_final.csv  scenarios_final1.csv  scenarios_final2.csv  scenarios_final3.csv
data_collection_module/: __init__.py  copula_scen_gen_final.ipynb  day_ahead_data.py  featch_load_forecast.py  fetch_afrr_prices.py  fetch_da_prices.py  fetch_picasso_price.py  funcs.py  main.py  power_demand_forecast.py  renewable_generation_forecast.py  scenario_code.ipynb  test copy 2.ipynb  test copy.ipynb  test.ipynb
ensamble_forecast/: afrr_up_price_forecast_minimal.ipynb  gaussian_process.par  gp_forecaster.py  gp_model_forecast.par  linear_models.par  lr_forecaster.py  lr_model_forecast.par  main_forecast.py  plotting.ipynb  scen_gen_da_price copy.ipynb  scen_gen_down_cap_price.ipynb  scen_gen_up_cap_price copy.ipynb  scen_gen_up_cap_price.ipynb  xgb_forecaster.py  (+1 more)
utils/: ssa.py  (+3 more)
(+44 files in other folders)
